Homepage beige-to-image background
Added a background for the main section of the home page that fades a burlywood collor to a pretty image of furniture.

--- a/css/main.css
+++ b/css/main.css
@@ -6,18 +6,19 @@
   font-size: 2rem;
   padding: 5px;
   padding-right: 30px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .navbar ul {
   list-style: none;
   padding: 0px;
   margin: 0px;
-  background-color: darkblue;
   overflow: hidden;
 }
 
 .navbar a {
-  color: white;
+  color: gray;
   text-decoration: none;
   padding: 15px;
   margin: 5px;
@@ -25,7 +26,7 @@
 }
 
 .navbar a:hover {
-  color: aqua;
+  color: darkslategray;
 }
 
 .navbar li {
@@ -53,13 +54,27 @@ li {
 .top-container {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding: 0px;
 }
 
-.mid-main-container {
+.mid-home-container {
   display: flex;
   justify-content: space-between;
   padding: 10px;
+
+  height: 100vh;
+  margin: 0;
+
+  background: linear-gradient(
+      to right,
+      burlywood 30%,
+      rgba(245, 245, 220, 0) 50%
+    ),
+    url("../img/furniture1.jpg");
+
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
 }
 
 .mid-container {
@@ -74,5 +89,6 @@ li {
   padding: 10px;
 }
 /* Main */
+
 /*Footer*/
 /**/
