--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,7 @@ li {
   place-items: center;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
 }
 
 .showcase-img {
@@ -146,7 +147,7 @@ li {
 /*Footer*/
 /*Media querys*/
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1000px) {
   .showcase-container {
     grid-template-columns: 1fr 1fr;
   }
