--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@
   font-family: "Bree Serif", serif;
   font-weight: 200;
   font-style: normal;
+  text-align: center;
+  font-size: 3rem;
 }
 /*Logo*/
 #logo {
@@ -124,11 +126,6 @@ li {
   box-shadow: 0px 0px 18px rgb(207, 207, 207);
 }
 
-.showcase-item-text {
-  text-align: center;
-  font-size: 3rem;
-}
-
 .mid-container {
   display: flex;
   justify-content: space-between;
@@ -142,6 +139,45 @@ li {
   padding: 0px;
   background-color: rgb(0, 0, 0);
 }
+
+.product-1-showcase {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Changed from grid-template-rows to grid-template-columns */
+  column-gap: 10px; /* Changed from row-gap to column-gap */
+  padding: 10px;
+  background-color: tomato;
+}
+
+.product-1 {
+  width: 500px;
+  align-items: center;
+ }
+
+.product-1-text {
+  font-family: "Bree Serif", serif;
+  font-weight: 200;
+  font-style: normal;
+  text-align: center;
+  font-size: 2rem;
+ }
+
+ .product-1-price {
+  font-family: "Bree Serif", serif;
+  font-weight: 100;
+  font-style: normal;
+  text-align: center;
+  font-size: 2rem;
+ }
+
+ .product-1-button {
+  display: flex;
+  align-content: center;
+  font-family: "Bree Serif", serif;
+  font-weight: 100;
+  font-style: normal;
+  font-size: 2rem;
+  margin-top: 10px;
+ }
 /* Main */
 
 /*Footer*/
