--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,17 @@
   font-family: "Bree Serif", serif;
   font-weight: 200;
   font-style: normal;
+
+  text-align: center;
+  font-size: 2rem;
 }
+
+/* Hover on images */
+img:hover {
+  transform: scale(1.05);
+  transition: 0.3s ease-in-out;
+}
+
 /*Logo*/
 #logo {
   font-weight: 600;
@@ -114,6 +124,49 @@ li {
   gap: 2rem;
 }
 
+/* Featured items Homepage */
+
+.bottom-home-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+
+  height: 70vh;
+  margin: 0;
+
+  background: bisque;
+}
+
+.featured-item-title {
+  font-size: 50px;
+  color: black;
+
+  text-decoration: underline;
+
+  padding-left: 20px;
+  padding-top: 100px;
+}
+
+.showcase-container-home {
+  place-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 5rem;
+
+  margin: 0 auto;
+}
+
+.showcase-item-text-home {
+  text-align: center;
+  font-size: 20px;
+}
+
+.showcase-img-home {
+  height: 200px;
+  width: 200px;
+  border-bottom: 7px solid rgb(235, 235, 235);
+}
+
 .showcase-img {
   height: 400px;
   width: 400px;
@@ -124,26 +177,15 @@ li {
   box-shadow: 0px 0px 18px rgb(207, 207, 207);
 }
 
-.showcase-item-text {
-  text-align: center;
-  font-size: 3rem;
-}
-
-.mid-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  background-color: tomato;
-}
-
-.bottom-container {
-  display: flex;
-  justify-content: space-between;
-  padding: 0px;
-  background-color: rgb(0, 0, 0);
-}
 /* Main */
-
+body {
+  margin-left: 0;
+  margin-right: 0;
+  padding-left: 0;
+  padding-right: 0;
+  width: 100%;
+  overflow-x: hidden; /* Prevents unwanted horizontal scrolling */
+}
 /*Footer*/
 /*Media querys*/
 
