--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,13 @@ li {
   align-items: center;
  }
 
+ .product-1-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+ }
+
 .product-1-text {
   font-family: "Bree Serif", serif;
   font-weight: 200;
@@ -166,7 +173,7 @@ li {
   font-weight: 100;
   font-style: normal;
   text-align: center;
-  font-size: 2rem;
+  font-size: 1rem;
  }
 
  .product-1-button {
