--- a/css/main.css
+++ b/css/main.css
@@ -273,4 +273,18 @@ body {
 }
 
 @media screen and (min-width: 1100px) {
+  .showcase-container-home {
+    gap: 5rem;
+  } 
+  
+  .showcase-img-home {
+    height: 300px;
+    width: 300px;
+  }
+
+  .showcase-item-text-home {
+    font-size: 25px;
+  }
+
+    
 }
