--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ body {
   background-color: rgb(0, 0, 0);
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (min-width: 800px) {
   .bottom-home-container {
     display: flex;
     flex-direction: column;
